--- a/Notebooks/viz.ipynb
+++ b/Notebooks/viz.ipynb
@@ -1,20 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Visualization and Network Analysis\n",
+    "In this part, we will try to make the visualization and network analysis with networkx and pyvis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Libraries and Final Dataset Preparation**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import networkx as nx\n",
     "from pyvis.network import Network\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from pyvis.network import Network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +52,7 @@
        "[736 rows x 3 columns]>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,8 +63,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Visualizations With Networkx and Pyviz**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +108,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n",
+      "dark.html\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000px\"\n",
+       "            height=\"700px\"\n",
+       "            src=\"dark.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x28abbdabe10>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pyvis.network import Network\n",
     "\n",
@@ -98,7 +152,7 @@
     "# Setting up node size attribute\n",
     "nx.set_node_attributes(G, node_degree, 'size')\n",
     "\n",
-    "# Disable physics simulation\n",
+    "# Minimize the physics simulation\n",
     "net.barnes_hut(gravity=0, central_gravity=0, spring_strength=0.001, damping=0.1)\n",
     "\n",
     "net.from_nx(G)\n",
@@ -106,8 +160,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Removing the Reverese Relations**\n",
+    "\n",
+    "Since our data is sourced from Wikifandom, the dataset includes relationships from each character's perspective. Consequently, there may be instances where relationships are recorded in reverse, leading to redundancy. As we can observe, the network visualization is notably dense, prompting us to remove these reverse relations in order to streamline and simplify the dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +192,7 @@
        "[669 rows x 3 columns]>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,24 +217,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "unique_values = df_cleaned[\"Relation\"].unique()\n",
-    "\n",
-    "for value in unique_values:\n",
-    "    print(value)\n",
-    "\n",
-    "with open(\"unique_values.txt\", \"w\") as file:\n",
-    "    for value in unique_values:\n",
-    "        file.write(value + \"\\n\")"
+    "Unfortunately, the elimination of the reverse relation didn't reduce the dataset significantly so the visualization would still be relatively dense."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -201,12 +255,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n",
+      "dark_cleaned.html\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000px\"\n",
+       "            height=\"700px\"\n",
+       "            src=\"dark_cleaned.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x28abbe5d610>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from pyvis.network import Network\n",
-    "\n",
     "net = Network(notebook=True, width=\"1000px\", height=\"700px\", bgcolor='#222222', font_color='white')\n",
     "\n",
     "node_degree = dict(G1.degree)\n",
@@ -214,11 +297,11 @@
     "# Setting up node size attribute\n",
     "nx.set_node_attributes(G1, node_degree, 'size')\n",
     "\n",
-    "# Disable physics simulation\n",
-    "net.barnes_hut(gravity=0, central_gravity=0)\n",
+    "# Minimize th physics simulation\n",
+    "net.barnes_hut(gravity=0, central_gravity=0, spring_strength=0.001, damping=0.1)\n",
     "\n",
     "net.from_nx(G1)\n",
-    "net.show(\"dark.html\")"
+    "net.show(\"dark_cleaned.html\")"
    ]
   },
   {
@@ -317,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -343,10 +426,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x15fd3e13c10>"
+       "<IPython.lib.display.IFrame at 0x15fd41ae7d0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,8 +444,6 @@
     "# Setting up node size attribute\n",
     "nx.set_node_attributes(G2, node_degree, 'size')\n",
     "\n",
-    "# Disable physics simulation\n",
-    "net.barnes_hut(gravity=0, central_gravity=0)\n",
     "\n",
     "net.from_nx(G2)\n",
     "net.show(\"parenthood.html\")"
