--- a/Notebooks/viz.ipynb
+++ b/Notebooks/viz.ipynb
@@ -305,8 +305,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Parenthood Relation**\n",
+    "\n",
+    "We could specifically filter the dataset to produce only son or daughter relations to see the dynamic effect of time travels to the parenthood relation."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +366,7 @@
        "703                 Regina Tiedemann   Bartosz Tiedemann       son>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -426,10 +435,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x15fd41ae7d0>"
+       "<IPython.lib.display.IFrame at 0x28ac2d600d0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
